Updated services section and contact number

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                      </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
-                     <h1 class="call_text">Contact Number : 0080099556</h1>
+                     <h1 class="call_text">Contact Number : +923045576706</h1>
                   </form>
                   <div class="search_icon">
                      <ul>
